# jackal

./: .travis.yml  README.md  rosinstall
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
jackal_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_base/config/: diagnostic_analyzers.yaml
jackal_base/env-hooks/: 50.jackal_find_mag_config.sh
jackal_base/include/jackal_base/: jackal_diagnostic_updater.h  jackal_hardware.h
jackal_base/launch/: base.launch
jackal_base/scripts/: calibrate_compass
jackal_base/src/: jackal_base.cpp  jackal_diagnostic_updater.cpp  jackal_hardware.cpp
jackal_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
jackal_bringup/launch/: accessories.launch
jackal_bringup/scripts/: install  navsat_rtk_relay
jackal_bringup/src/jackal_bringup/: navsat_rtk_relay.py
jackal_bringup/src/jackal_bringup/multicast/: LICENSE  README  Receiver.py  Sender.py  __init__.py  daemonize.py  network.py
jackal_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_control/config/: control.yaml  localization.yaml  robot_localization.yaml  robot_localization_gx5.yaml  teleop.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml  teleop_ps4.yaml  twist_mux.yaml
jackal_control/launch/: control.launch  control.launch.py  robot_localization.launch  teleop.launch  teleop_base.launch.py  teleop_joy.launch.py
jackal_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
jackal_description/launch/: description.launch  description.launch.py  display.launch.py
jackal_description/meshes/: LICENSE_rplidar_a2.txt  jackal-base.stl  jackal-fenders.stl  jackal-standard-bridge-plate.STL  jackal-wheel.stl  kinect_mount.stl  novatel-smart7.dae  pointgrey-camera-bracket.stl  rplidar_a2.stl
jackal_description/rviz/: display.rviz
jackal_description/scripts/: config_xacro  env_run.bat
jackal_description/urdf/: accessories.urdf.xacro  custom_example.urdf  empty.urdf  jackal.gazebo  jackal.urdf.xacro
jackal_description/urdf/accessories/: accessory_fender.urdf.xacro  azure_kinect.urdf.xacro  bridge_plate.urdf.xacro  camera_mount.urdf.xacro  fender.urdf.xacro  hdl32_mount.urdf.xacro  hokuyo_ust10.urdf.xacro  intel_realsense.urdf.xacro  jackal_standard_bridge_plate.urdf.xacro  novatel_gps.urdf.xacro  novatel_smart6.urdf.xacro  novatel_smart7.urdf.xacro  point_grey_flea.urdf.xacro  pointgrey_bumblebee2_mount.urdf.xacro  pointgrey_flea3_mount.urdf.xacro  rp_lidar.urdf.xacro  rplidar_a2.urdf.xacro  sick_lms100.urdf.xacro  sick_lms1xx.urdf.xacro  sick_lms1xx_inverted_mount.urdf.xacro  sick_lms1xx_mount.urdf.xacro  stereo_camera_mount.urdf.xacro  velodyne_vlp16.urdf.xacro  vlp16_mount.urdf.xacro  wibotic_bumper.urdf.xacro
jackal_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_diagnostics/: package.xml  setup.cfg  setup.py
jackal_diagnostics/config/: diagnostics.yaml
jackal_diagnostics/jackal_diagnostics/: diagnostics_updater.py
jackal_diagnostics/launch/: diagnostics.launch.py
jackal_diff_drive_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  jackal_diff_drive_controller_plugins.xml  package.xml
jackal_diff_drive_controller/include/jackal_diff_drive_controller/: diff_drive_controller.h
jackal_diff_drive_controller/src/: diff_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
jackal_gazebo/launch/: jackal_world.launch
jackal_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_msgs/msg/: Drive.msg  DriveFeedback.msg  Feedback.msg  Power.msg  Status.msg  StopStatus.msg
jackal_msgs/srv/: SetDomainId.srv
jackal_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav2.yaml  slam.yaml
jackal_navigation/config/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
jackal_navigation/launch/: amcl.launch  amcl_demo.launch  gmapping.launch  gmapping_demo.launch  gps_integration_demo.launch  gps_transform.launch  localization.launch.py  move_base.launch  move_base.launch~  nav2.launch.py  odom_navigation_demo.launch  slam.launch.py
jackal_navigation/launch/include/: amcl.launch  gmapping.launch  move_base.launch
jackal_navigation/maps/: jackal_race.yaml  office.pgm  office.yaml
jackal_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml
jackal_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
jackal_navigation/rviz/: gmapping.rviz  localization.rviz  navigation.rviz
jackal_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_teleop/: CMakeLists.txt  package.xml
jackal_teleop/config/: ps3.config.yaml
jackal_teleop/launch/: simple_joy.launch  teleop.launch
jackal_teleop/src/: simple_joy_node.cpp  sixpair.c
jackal_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_tutorials/doc/: calibration.rst  conf.py  index.rst  navigation.rst  network.rst  simulation.rst  startup.rst  update.rst
jackal_tutorials/doc/static/: clearpath.css
jackal_tutorials/doc/templates/: layout.html  sidebartoc.html
jackal_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_viz/launch/: view_model.launch  view_robot.launch
jackal_viz/rviz/: gmapping.rviz  localization.rviz  model.rviz  navigation.rviz  robot.rviz
