<?xml version="1.0"?>
<package>
  <name>jackal_bringup</name>
  <version>0.3.6</version>
  <description>Scripts for installing Jackal's robot software.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Jackal</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend version_gte="0.3">jackal_base</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>pointgrey_camera_driver</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend version_gte="0.1.1">robot_upstart</run_depend>

  <export>
  </export>
</package>
