<?xml version="1.0"?>
<package format="3">
  <name>jackal_description</name>
  <version>0.8.1</version>
  <description>URDF robot description for Jackal</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!--exec_depend>lms1xx</exec_depend>
  <exec_depend>pointgrey_camera_description</exec_depend-->
  <exec_depend>velodyne_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
