<?xml version="1.0"?>
<package>
  <name>jackal_teleop</name>
  <version>0.0.0</version>
  <description>Nodes and launchfile for teleoperating Jackal.</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jackal_teleop</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>libusb-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>libusb-dev</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
