<?xml version="1.0"?>
<package>
  <name>jackal_viz</name>
  <version>0.3.2</version>
  <description>Visualization launchers and helpers for Jackal.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend version_gte="0.5">jackal_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
